# ja-vicuna-qa-benchmark

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  test.yml
configs/: README.md  cyberagent--calm2-7b-chat.json  llm-jp--llm-jp-13b-instruct-full-jaster-dolly-oasst-v1.0.json  llm-jp--llm-jp-13b-instruct-lora-jaster-dolly-oasst-v1.0.json  openai--text-davinci-003.json  rinna--japanese-gpt-neox-3.6b-instruction-ppo.json  rinna--japanese-gpt-neox-3.6b-instruction-sft-v2.json  rinna--japanese-gpt2-small.json  tokyotech-llm--Swallow-70b-instruct-hf.json
data/: judge_prompts_jp.jsonl
data/jp_bench/: judge_prompts.jsonl  question.jsonl
data/jp_bench/model_answer/: Llama-2-7b-hf.jsonl  cyberagent--calm2-7b-chat.jsonl  cyberagent-open-calm-7b.jsonl  gpt-3.5-davinci.jsonl  llama2_13b.jsonl  llama2_13b_mt_data_52000.jsonl  llama2_self-instruction_data_1000.jsonl  llama2_self-instruction_data_52000.jsonl  llama_7b.jsonl  (+31 more)
docs/: training.md
fastchat/llm_judge/: .gitignore  .nfs0000000381418603000001b4  .nfs0000000381418604000001b3  .nfs0000000381a09300000001b5  README.md  common.py  gen_gpt3.5_answer.py  gen_judgment.py  gen_model_answer.py  gen_rinna_answer.py  get_alpaca_answer.sh  get_rinna_answer.sh  judge.sh  mtanswer.out  recompile_test.py  result.sh  run_eval.sh  show_result.py
fastchat/model/: merge.sh
llm_judge/: common.py  compute_agreement.py  conversation.py  download_mt_bench_pregenerated.py  gen_gpt3.5_answer.py  gen_judgment.py  gen_model_answer.py  gen_model_answer_ori.py  get_alpaca_answer.sh  get_rinna_answer.sh  judge.sh  model_adapter.py  reparse_pairwise_judgement.py  result.sh  show_result.py  upload_result.py  utils.py
llm_judge/model/: apply_lora.py  model_adapter.py  model_falcon.py
scripts/: get_model_answer.sh  judge.sh  result.sh
tests/: __init__.py  test_common.py  test_show_result.py
(+88 files in other folders)
