[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ja-vicuna-qa-benchmark"
version = "2.0.3"
description = "Japanese Vicuna QA Benchmark for measuring comprehensive capabilities of Japanese LLMs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate", "fastapi", "gradio==3.35.2", "httpx", "markdown2[all]", "nh3", "numpy",
    "peft==0.5", "prompt_toolkit>=3.0.0", "pydantic<=2.0", "requests", "rich>=10.0.0", "sentencepiece",
    "shortuuid", "shortuuid", "tiktoken", "tokenizers>=0.12.1", "torch",
    "transformers", "uvicorn", "wandb", "openai==0.28.1", "ray", "python-dotenv", "protobuf==3.19",
    "wandb", "tiktoken"
]

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "I001"  # isort
]

[tool.setuptools.packages.find]
exclude = ["*"]
